# test_task_deribit

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/clients/: deribit_client.py
app/db/: session.py
app/models/: __init__.py  price.py
app/repositories/: price_repo.py
app/schemas/: price_schema.py
app/services/: price_service.py
app/tasks/: __init__.py  celery_app.py  price_tasks.py
docker/: Dockerfile  entrypoint.sh
